src/objects/Site_Metric__c.object
<CustomObject>
    <description>Single analytic metric for a Force.com site</description>
    <fields>
        <fullName>Display_Value__c</fullName>
        <description>Alternate value to display in reports (ie. Time in minutes for Average Time on Site instead of seconds in Value)</description>
        <label>Display Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <description>Metric name from external system (ie Google Analytics)</description>
        <label>Metric</label>
        <picklist>
            <picklistValues>
                <fullName>ga:avgTimeOnSite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ga:pageviewsPerVisit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ga:percentNewVisits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ga:visitBounceRate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ga:visitLength</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ga:visitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mediaCodeConversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>medicalInquirySource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sampleRequestPDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sampleRequestSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>savingsRequestSource</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Metric_Date__c</fullName>
        <label>Site Metric Date</label>
        <referenceTo>Site_Metric_Date__c</referenceTo>
        <relationshipLabel>Site Metrics</relationshipLabel>
        <relationshipName>Site_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>Time value of metric in minutes:seconds</description>
        <inlineHelpText>Time value of metric in minutes:seconds</inlineHelpText>
        <label>Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Site Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Metric__c</columns>
        <columns>Site_Metric_Date__c</columns>
        <columns>Value__c</columns>
        <columns>Display_Value__c</columns>
        <columns>Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Site Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Time_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
len(Time__c) &gt; 0,
OR(
NOT(ISNUMBER( LEFT( Time__c , 2) )), 
NOT(CONTAINS(Time__c,&apos;:&apos;)), 
NOT(ISNUMBER( RIGHT( Time__c , 2) )) 
)
)</errorConditionFormula>
        <errorDisplayField>Time__c</errorDisplayField>
        <errorMessage>Time must be in format mm:ss</errorMessage>
    </validationRules>
</CustomObject>